--- a/css/styles.css
+++ b/css/styles.css
@@ -131,3 +131,53 @@ td.text-end .btn {
 .table thead th {
   font-size: 1.3rem;
 }
+
+/* === About Checkboxes === */
+.completion-checkbox {
+  position: relative;
+  appearance: none;
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 20px; /* Set the width of the checkbox */
+  height: 20px; /* Set the height of the checkbox */
+  border: 1px solid #69665C; /* Border color for the checkbox */
+  border-radius: 3px; /* Optional: adjust border radius */
+  background-color: transparent; /* No background color */
+  cursor: pointer; /* Pointer cursor on hover */
+}
+
+/* Hidden initial state */
+.completion-checkbox::before {
+  content: '';
+  position: absolute;
+  left: 4px;
+  bottom: 1px;
+  width: 10px;
+  height: 25px;
+  border: solid #75ce52;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg) scale(0);
+  opacity: 0;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+/* Checkmark style */
+.completion-checkbox:checked::before {
+  transform: rotate(45deg) scale(1);
+  opacity: 1;
+}
+
+.checkbox-th {
+  width: 1px;
+  white-space: nowrap;
+}
+
+.checkbox-td {
+  width: 1px;
+  white-space: nowrap;
+}
+
+.completed {
+  text-decoration: line-through; /* Adds the strike-through line */
+  color: #2f6945; /* Optional: change color to indicate completed status */
+} 
